Fixed spacing for Google Plus icon in #addthis.

--- a/skins/agcommon_styles/_social-media.scss
+++ b/skins/agcommon_styles/_social-media.scss
@@ -146,8 +146,14 @@
     margin: 0.5rem 0 1rem !important;
 }
 
-#addthis #___plusone_0 {
-    margin: 0 !important;
+#addthis {
+    #___plusone_0 {
+        margin: 0 !important;
+    }
+    
+    .google_plusone_iframe_widget {
+        width: auto !important;
+    }
 }
 
 /* No idea what this fixes */
